feat: Dynamic course details rendering

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -31,3 +31,33 @@
 body {
   @apply bg-background text-text;
 }
+
+.container-sm {
+  width: 100%;
+}
+
+@media (min-width: 640px) {
+  .container-sm {
+    max-width: 460px;
+  }
+}
+@media (min-width: 768px) {
+  .container-sm {
+    max-width: 600px;
+  }
+}
+@media (min-width: 1024px) {
+  .container-sm {
+    max-width: 800px;
+  }
+}
+@media (min-width: 1280px) {
+  .container-sm {
+    max-width: 960px;
+  }
+}
+@media (min-width: 1536px) {
+  .container-sm {
+    max-width: 1080px;
+  }
+}
