--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,15 @@
 ---
 import Header from "../components/shared/Header/Header.astro";
 import "../styles/global.css";
+
+const SITEBASEURL = "https://www.quantuminstitute.edu.np";
+const {
+  title,
+  description = "Explore top-tier courses, learning resources, and career-building programs at Quantum Institute.",
+  slug = "",
+} = Astro.props;
+
+const canonicalUrl = `${SITEBASEURL}/${slug}`.replace(/\/+$/, "");
 ---
 
 <!doctype html>
@@ -8,17 +17,37 @@ import "../styles/global.css";
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
-    <title>Quantum Institute</title>
+    <title>{title} {title && "-"} Quantum Institute</title>
+    <meta name="description" content={description} />
 
+    <!-- Canonical URL -->
+    <link rel="canonical" href={canonicalUrl} />
+
+    <!-- Open Graph -->
+    <meta property="og:title" content={title} />
+    <meta property="og:description" content={description} />
+    <meta property="og:url" content={canonicalUrl} />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Quantum Institute" />
+
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content={title} />
+    <meta name="twitter:description" content={description} />
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+
+    <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Questrial&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&family=Questrial&display=swap"
       rel="stylesheet"
     />
 
+    <!-- Flaticon Icons -->
     <link
       rel="stylesheet"
       href="https://cdn-uicons.flaticon.com/2.4.0/uicons-brands/css/uicons-brands.css"
