--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,13 @@
 ---
 import Homepage from "@/components/Homepage.astro";
 import Layout from "@/layouts/Layout.astro";
+import KeyDatesSection from "@/components/section/KeyDatesSection.astro";
+
+import FaqSection from "@/components/section/FaqSection.astro";
 ---
 
 <Layout>
   <Homepage />
+  <KeyDatesSection />
+  <FaqSection />
 </Layout>
