--- a/src/components/cards/KeyDatesCard.astro
+++ b/src/components/cards/KeyDatesCard.astro
@@ -1,5 +1,56 @@
 ---
+import type { IKeyDate } from "@/data/keyDates";
+import ContainerLayout from "@/layouts/ContainerLayout.astro";
 
+
+interface Props {
+  keyDate: IKeyDate;
+}
+
+const { keyDate } = Astro.props;
 ---
 
-Key date card
+    <div class="flex bg-surface-2 gap-0.5 rounded-xl  border border-surface-2 overflow-hidden container ">
+    
+    <div class="bg-brand-yellow-3 text-black gap-4 flex flex-col items-center justify-center min-w-[200px]">
+        <div class="text-2xl font-bold uppercase tracking-wide">{keyDate.month}</div>
+        <div class="text-8xl font-bold leading-none">{keyDate.day}</div>
+    </div>
+
+    
+    <div class="flex-1 p-4 bg-white border-surface-1 border-[1px] ">
+        
+        <div class="flex gap-2 ">
+        {keyDate.category.map((i) => (
+            <span class="px-3 py-1 text-xs bg-surface-1 text-brand-primary-black rounded-full">
+            {i}
+            </span>
+        ))}
+        </div>
+
+        
+        <h3 class="text-lg font-semibold text-gray-900 mb-3 leading-tight">
+        {keyDate.title}
+        </h3>
+
+        
+        <p class="text-gray-600 text-sm mb-4 leading-relaxed">
+        {keyDate.description}
+        </p>
+
+        
+        {keyDate.learnMoreUrl && (
+        <div class="flex items-center justify-between text-text">
+            <a 
+            href={keyDate.learnMoreUrl}
+            class="flex items-center text-text w-full font-medium text-sm transition-colors duration-200 justify-between"
+            >
+            <span>Learn More</span>
+            <span class="size-6 rounded-full border border-gray-300 flex items-center justify-center">
+            <i class="fi fi-rr-arrow-small-right text-xl mt-1 text-text"></i>
+            </span>
+            </a>
+        </div>
+        )}
+    </div>
+    </div>
