--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,7 +7,8 @@ import FaqSection from "@/components/section/FaqSection.astro";
 ---
 
 <Layout>
-  <Homepage />
-  <KeyDatesSection />
-  <FaqSection />
+  <div class="space-y-12">
+    <KeyDatesSection />
+    <FaqSection />
+  </div>
 </Layout>
