--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,7 @@
 ---
 import Header from "../components/shared/Header/Header.astro";
 import "../styles/global.css";
+import { AstroFont } from "astro-font";
 
 const SITEBASEURL = "https://www.quantuminstitute.edu.np";
 const {
