--- a/src/components/shared/Header/TopNav.astro
+++ b/src/components/shared/Header/TopNav.astro
@@ -3,7 +3,7 @@ import ContainerLayout from "@/layouts/ContainerLayout.astro";
 ---
 
 <div class="bg-brand-primary text-background">
-  <ContainerLayout className="flex items-center gap-2 justify-between">
+  <ContainerLayout size="base" className="flex items-center gap-2 justify-between">
     <div class=""></div>
 
     <ul>
