--- a/src/components/section/FaqSection.astro
+++ b/src/components/section/FaqSection.astro
@@ -8,7 +8,7 @@ import Faqquestion from "../faqquestion.astro";
 ---
 
 <ContainerLayout>
-  <div class="flex flex-col gap-12">
+  <div class="space-y-48">
     <Faqquestion />
 
     <div class="flex flex-col gap-12 w-full">
