--- a/src/layouts/ContainerLayout.astro
+++ b/src/layouts/ContainerLayout.astro
@@ -1,6 +1,6 @@
 ---
 const {
-  size = "base",
+  size = "sm",
   isCenter = true,
   className,
 } = Astro.props as {
@@ -10,11 +10,8 @@ const {
 };
 ---
 
-<!-- <div
+<div
   class={`${size === "sm" ? "container-sm" : "container"} ${isCenter && "mx-auto"} ${className} px-4`}
 >
-  <slot />
-</div> -->
-<div class="custom-container">
   <slot />
 </div>
