--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -25,8 +25,8 @@
   --color-brand-yellow-3: #f3bd1c;
   --color-brand-yellow-4: #f4d526;
 
-  --font-primary: "Questrial", sans-serif;
-  --font-secondary: "Lato", sans-serif;
+  --font-primary: "futura";
+  --font-secondary: "nexa";
 }
 
 body {
