--- a/src/components/section/KeyDatesSection.astro
+++ b/src/components/section/KeyDatesSection.astro
@@ -2,7 +2,6 @@
 import ContainerLayout from "@/layouts/ContainerLayout.astro";
 import KeyDatesCard from "@/components/cards/KeyDatesCard.astro";
 import keyDates from "@/data/keyDates";
-import Button from "@/components/ui/Button.astro";
 ---
 
 <ContainerLayout>
@@ -12,12 +11,12 @@ import Button from "@/components/ui/Button.astro";
         Key Dates
       </h2>
 
-      <button
-        type="button"
-        class="bg-brand-primary-yellow text-brand-primary-black font-semibold rounded-md hover:brightness-95 transition text-sm py-3 max-w-[100px]"
+      <a
+        href="/all-key-dates"
+        class="bg-brand-primary-yellow text-brand-primary-black font-semibold rounded-md hover:brightness-95 transition text-sm py-3 max-w-[100px] text-center inline-block"
       >
         All Key Dates
-      </button>
+      </a>
     </div>
 
     <div class="flex-1">
@@ -32,10 +31,6 @@ import Button from "@/components/ui/Button.astro";
   </div>
 
   <div class="space-y-4">
-    {
-      keyDates.slice(0, 3).map((keyDate, ) => (
-          <KeyDatesCard keyDate={keyDate} />
-      ))
-    }
+    {keyDates.slice(0, 3).map((keyDate) => <KeyDatesCard keyDate={keyDate} />)}
   </div>
 </ContainerLayout>
