--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Questrial&display=swap");
 @import "tailwindcss";
 
 @theme {
@@ -25,12 +26,12 @@
   --color-brand-yellow-3: #f3bd1c;
   --color-brand-yellow-4: #f4d526;
 
-  --font-primary: "futura";
-  --font-secondary: "nexa";
+  --font-primary: "futura", sans-serif;
+  --font-secondary: "nexa", sans-serif;
 }
 
 body {
-  @apply bg-background text-text;
+  @apply bg-background text-text font-primary;
 }
 
 .container-sm {
