--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,7 @@
 @import "tailwindcss";
 
 @theme {
-  /* --color-background: hsl(0 0% 95%); */
-  --color-background: [#FFFFFF];
+  --color-background: hsl(0 0% 95%);
   --color-text: hsl(222 40% 15%);
   --color-surface: hsl(0 0% 95%);
   --color-surface-1: hsl(0 0% 91%);
