--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,7 +7,8 @@
   --color-surface: hsl(0 0% 95%);
   --color-surface-1: hsl(0 0% 91%);
   --color-surface-2: hsl(0 0% 86%);
-  --color-muted: hsl(222 8% 55%);
+  /* --color-muted: hsl(222 8% 55%); */
+  --color-muted: hsla(0, 0%, 26%, 1);
   --color-error: hsl(0 70% 58%);
   --color-success: hsl(142 50% 45%);
 
