feat: add course page with dynamic routing and course retrieval Added custom fonts

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Questrial&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import "tailwindcss";
 
 @theme {
@@ -28,12 +28,15 @@
   --color-brand-yellow-3: #f3bd1c;
   --color-brand-yellow-4: #f4d526;
 
-  --font-primary: "futura", sans-serif;
-  --font-secondary: "nexa", sans-serif;
+  --font-primary: "League Spartan", serif;
+  --font-secondary: "Poppins", serif;
 }
 
 body {
-  @apply bg-background text-text font-primary;
+  @apply bg-background text-text font-secondary;
+
+  font-style: normal;
+  font-optical-sizing: auto;
 }
 
 .container-sm {
@@ -67,3 +70,35 @@ body {
 }
 
 /* * {outline: 1px solid red;} */
+
+/*  */
+/*  */
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes fadeOut {
+  from {
+    opacity: 1;
+    transform: translateY(0);
+  }
+  to {
+    opacity: 0;
+    transform: translateY(20px);
+  }
+}
+
+.fade-in {
+  animation: fadeIn 0.3s forwards;
+}
+
+.fade-out {
+  animation: fadeOut 0.3s forwards;
+}
