--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -8,7 +8,7 @@
   --color-surface-1: hsl(0 0% 91%);
   --color-surface-2: hsl(0 0% 86%);
   /* --color-muted: hsl(222 8% 55%); */
-  --color-muted: hsla(0, 0%, 26%, 1);
+  --color-muted: #64748b;
   --color-error: hsl(0 70% 58%);
   --color-success: hsl(142 50% 45%);
 
