--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -70,7 +70,6 @@ body {
 }
 
 /*  */
-/*  */
 @keyframes fadeIn {
   from {
     opacity: 0;
@@ -140,3 +139,6 @@ body {
   background-color: #9ca3af;
   border-radius: 50%;
 }
+
+/*  */
+/* * {  outline: 1px solid green; } */
