Enhance HomePage with typewriter effect in hero section
Refactor CourseCard and KeyDateCard components for improved styling

Refactor navigation components for better structure and styling

Implement TypewriterEffect component

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -39,37 +39,8 @@ body {
   font-optical-sizing: auto;
 }
 
-.container-sm {
-  width: 100%;
-}
+/* ------------------- ANIMATIONS --------------------- */
 
-@media (min-width: 640px) {
-  .container-sm {
-    max-width: 460px;
-  }
-}
-@media (min-width: 768px) {
-  .container-sm {
-    max-width: 600px;
-  }
-}
-@media (min-width: 1024px) {
-  .container-sm {
-    max-width: 800px;
-  }
-}
-@media (min-width: 1280px) {
-  .container-sm {
-    max-width: 960px;
-  }
-}
-@media (min-width: 1536px) {
-  .container-sm {
-    max-width: 1080px;
-  }
-}
-
-/*  */
 @keyframes fadeIn {
   from {
     opacity: 0;
@@ -99,6 +70,8 @@ body {
 .fade-out {
   animation: fadeOut 0.3s forwards;
 }
+
+/* ------------------- RICH TEXT --------------------- */
 
 .rich_text p {
   font-size: 16px;
@@ -140,5 +113,67 @@ body {
   border-radius: 50%;
 }
 
-/*  */
+/* ------------------- SM --------------------- */
+
+.container-sm {
+  width: 100%;
+}
+
+@media (min-width: 640px) {
+  .container-sm {
+    max-width: 460px;
+  }
+}
+@media (min-width: 768px) {
+  .container-sm {
+    max-width: 600px;
+  }
+}
+@media (min-width: 1024px) {
+  .container-sm {
+    max-width: 800px;
+  }
+}
+@media (min-width: 1280px) {
+  .container-sm {
+    max-width: 960px;
+  }
+}
+@media (min-width: 1536px) {
+  .container-sm {
+    max-width: 1080px;
+  }
+}
+
+/* ------------------- MD --------------------- */
+.container-md {
+  width: 100%;
+}
+
+@media (min-width: 640px) {
+  .container-md {
+    max-width: 550px;
+  }
+}
+@media (min-width: 768px) {
+  .container-md {
+    max-width: 680px;
+  }
+}
+@media (min-width: 1024px) {
+  .container-md {
+    max-width: 910px;
+  }
+}
+@media (min-width: 1280px) {
+  .container-md {
+    max-width: 1120px;
+  }
+}
+@media (min-width: 1536px) {
+  .container-md {
+    max-width: 1310px;
+  }
+}
+
 /* * {  outline: 1px solid green; } */
