--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,7 +14,7 @@
 
 	--color-powder-blue: #edf5ff;
 
-	--color-brand-primary: #002a5c;
+	--color-brand-primary: #78256f;
 	--color-brand-primary-yellow: #f3bd1c;
 	--color-brand-primary-black: #111111;
 
