--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import "tailwindcss";
 
 @theme {
@@ -28,13 +29,13 @@
   --color-brand-yellow-3: #f3bd1c;
   --color-brand-yellow-4: #f4d526;
 
-  --font-primary: "League Spartan", serif;
-  --font-secondary: "Poppins", serif;
+  --font-primary: "League Spartan", sans-serif;
+  --font-secondary: "Poppins", sans-serif;
 }
 
 body {
-  @apply bg-background text-text font-secondary;
-
+  @apply bg-background text-text;
+  font-family: var(--font-secondary);
   font-style: normal;
   font-optical-sizing: auto;
 }
