--- a/src/app/css/globals.css
+++ b/src/app/css/globals.css
@@ -1,3 +1,4 @@
+@import url('./rich_text_container.css');
 @import url("https://fonts.googleapis.com/css2?family=League+Spartan:wght@100..900&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 @import "tailwindcss";
@@ -71,103 +72,7 @@ body {
 .fade-out {
   animation: fadeOut 0.3s forwards;
 }
-
-/* ------------------- RICH TEXT --------------------- */
-
-.rich_text_container ul,
-.rich_text_container ol {
-  list-style: disc;
-  padding-left: 1.5rem;
-  margin-top: 1rem;
-}
-
-.rich_text_container li {
-  margin-bottom: 0.5rem;
-}
-
-.rich_text_container p {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
-}
-
-.rich_text_container h1 {
-  font-size: 2.25rem;
-  font-weight: bold;
-  margin-top: 2rem;
-  margin-bottom: 1rem;
-}
-
-.rich_text_container h2 {
-  font-size: 1.875rem;
-  font-weight: bold;
-  margin-top: 1.5rem;
-  margin-bottom: 0.75rem;
-}
-
-.rich_text_container h3 {
-  font-size: 1.5rem;
-  font-weight: bold;
-  margin-top: 1.25rem;
-  margin-bottom: 0.5rem;
-}
-
-.rich_text_container a {
-  color: #3b82f6;
-  text-decoration: underline;
-}
-
-.rich_text_container strong,
-.rich_text_container b {
-  font-weight: bold;
-}
-
-.rich_text_container em,
-.rich_text_container i {
-  font-style: italic;
-}
-
-.rich_text_container.table_wrapper {
-  width: 100%;
-  overflow-x: scroll;
-  -webkit-overflow-scrolling: touch;
-}
-
-.rich_text_container table {
-  width: 100%;
-  border-collapse: collapse;
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
-  font-size: 0.95rem;
-}
-
-.rich_text_container caption {
-  text-align: center;
-  font-weight: 600;
-  margin-bottom: 0.5rem;
-}
-
-.rich_text_container th,
-.rich_text_container td {
-  border: 1px solid #ddd;
-  padding: 0.75rem;
-  vertical-align: top;
-}
-
-.rich_text_container th {
-  background-color: #f9fafb;
-  font-weight: 600;
-  text-align: center;
-}
-
-.rich_text_container tbody tr:nth-child(even) {
-  background-color: #fdfdfd;
-}
-
-.rich_text_container .section {
-  background: #eef4ff;
-  font-weight: 700;
-  text-align: left;
-}
+/*  */
 
 .rich_text p {
   font-size: 16px;
